@@ -1,3 +1,8 @@
+Mon Nov 29 05:54:22 2010  Koichi Sasada  <ko1@atdot.net>
+
+	* thread_pthread.c (native_cond_*): Check return code.
+	  (Some OSs except Linux return error code).
+
 Sat Nov 27 19:12:10 2010  Tanaka Akira  <akr@fsij.org>
 
 	* time.c: parenthesize macro arguments.
